[tool.poetry]
name = "to-do-app-01"
version = "0.1.0"
description = ""
authors = ["GuilhermeKulkamp <guilhermekulkamp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
